--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uber-clone",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -19,7 +19,11 @@
     "react-native-safe-area-context": "4.12.0",
     "tailwindcss": "^3.4.17",
     "expo-splash-screen": "~0.29.24",
-    "expo-font": "~13.0.4"
+    "expo-font": "~13.0.4",
+    "expo-router": "~4.0.20",
+    "react-native-screens": "~4.4.0",
+    "expo-linking": "~7.0.5",
+    "expo-constants": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
