--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.9.14",
     "expo": "~52.0.46",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
+    "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "^14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.9",
@@ -24,7 +27,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
